--- a/juc-test-01/pom.xml
+++ b/juc-test-01/pom.xml
@@ -28,6 +28,13 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.6</version>
         </dependency>
+
+        <!--定位：分析对象在JVM的大小和分布-->
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.9</version>
+        </dependency>
     </dependencies>
 
     <build>
